# SIGBUILD

./: .gitignore  CMakeLists.txt  QtCreatorSysTray.json.in  README.md  SIGBUILD.json.in  SIGBUILD.pro  qtcreatorsystray.pro
.github/workflows/: cmake-multi-platform.yml
res/: resources.qrc
src/: BuildData.cpp  BuildData.h  DialogLastBuild.cpp  DialogLastBuild.h  DialogSessionBuilds.cpp  DialogSessionBuilds.h  Label.cpp  Label.h  OptionsPageMain.cpp  OptionsPageMain.h  OptionsPageMainWidget.cpp  OptionsPageMainWidget.h  Settings.cpp  Settings.h  SigbuildDefines.h  SigbuildGlobal.h  SigbuildPlugin.cpp  SigbuildPlugin.h  qtcreatorsystray_global.h  qtcreatorsystrayplugin.cpp  qtcreatorsystrayplugin.h
